--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://legacy-modernization.io/'
 languageCode = 'en-us'
-title = 'Legacy Modernization Patterns'
+title = 'Legacy Modernization'
 theme = 'ananke'
