--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,13 @@ baseURL = 'https://legacy-modernization.io/'
 languageCode = 'en-us'
 title = 'Legacy-Modernization.io'
 theme = 'ananke'
+
+[menus]
+  [[menus.main]]
+    name = 'Home'
+    pageRef = '/'
+    weight = 10
+  [[menus.main]]
+    name = 'Patterns'
+    pageRef = '/patterns'
+    weight = 20
