--- a/hugo.toml
+++ b/hugo.toml
@@ -10,5 +10,5 @@ theme = 'ananke'
     weight = 10
   [[menus.main]]
     name = 'Patterns'
-    url = '/patterns'
+    pageRef = '/patterns'
     weight = 20
