--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://legacy-modernization.io/'
 languageCode = 'en-us'
 title = 'Legacy-Modernization.io'
-theme = 'Perplex'
+theme = 'perplex'
